--- a/hdi/hdi_hr_payroll/views/hr_payslip_views.xml
+++ b/hdi/hdi_hr_payroll/views/hr_payslip_views.xml
@@ -53,7 +53,7 @@
                         <group>
                             <field name="employee_id" readonly="state != 'draft'"/>
                             <field name="contract_id" readonly="state != 'draft'" context="{'default_employee_id': employee_id}" domain="[('employee_id', '=', employee_id), ('state', 'in', ['open', 'close'])]"/>
-                            <field name="struct_id" readonly="state != 'draft'"/>
+                            <field name="struct_id" readonly="state != 'draft' or contract_id" options="{'no_create': True, 'no_open': True}"/>
                             <field name="is_probation" invisible="1"/>
                             <div class="alert alert-info" role="alert" invisible="not contract_id">
                                 <div invisible="not is_probation">
