--- a/hdi/hdi_wms/views/warehouse_layout_views.xml
+++ b/hdi/hdi_wms/views/warehouse_layout_views.xml
@@ -46,6 +46,9 @@
                     </group>
 
                     <field name="description" placeholder="Mô tả sơ đồ..."/>
+                    
+                    <!-- Hidden fields for computed dependencies -->
+                    <field name="location_ids" invisible="1"/>
 
                     <notebook>
                         <page string="Vị Trí (Locations)" name="locations">
@@ -102,7 +105,7 @@
         <field name="name">warehouse.layout.kanban</field>
         <field name="model">warehouse.layout</field>
         <field name="arch" type="xml">
-            <kanban default_group_by="warehouse_id" class="o_kanban_small_column">
+            <kanban class="o_kanban_small_column">
                 <templates>
                     <t t-name="kanban-box">
                         <div class="oe_kanban_card">
@@ -156,7 +159,7 @@
     <record id="action_warehouse_layout_list" model="ir.actions.act_window">
         <field name="name">Sơ Đồ Kho 3D</field>
         <field name="res_model">warehouse.layout</field>
-        <field name="view_mode">kanban,list,form</field>
+        <field name="view_mode">list,kanban,form</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Tạo sơ đồ kho 3D mới!
