--- a/hdi/warehouse_map/wizard/location_action_wizard_views.xml
+++ b/hdi/warehouse_map/wizard/location_action_wizard_views.xml
@@ -19,16 +19,14 @@
                     <notebook>
                         <page string="Chọn sản phẩm/Lot">
                             <group>
-                                <field name="quant_ids" widget="many2many_tags" 
+                                <field name="quant_ids" 
                                        domain="[('location_id', '=', location_id), ('quantity', '>', 0)]"
                                        options="{'no_create': True}">
-                                    <tree>
+                                    <list>
                                         <field name="product_id"/>
                                         <field name="lot_id"/>
                                         <field name="quantity"/>
-                                        <field name="reserved_quantity"/>
-                                        <field name="available_quantity"/>
-                                    </tree>
+                                    </list>
                                 </field>
                             </group>
                             <separator string="Hoặc nhập thủ công"/>
