--- a/hdi/warehouse_map/views/warehouse_map_views.xml
+++ b/hdi/warehouse_map/views/warehouse_map_views.xml
@@ -57,7 +57,7 @@
         <field name="name">warehouse.map.tree</field>
         <field name="model">warehouse.map</field>
         <field name="arch" type="xml">
-            <tree string="Sơ đồ kho">
+            <list string="Sơ đồ kho">
                 <field name="sequence" widget="handle"/>
                 <field name="name"/>
                 <field name="warehouse_id"/>
@@ -65,7 +65,7 @@
                 <field name="rows"/>
                 <field name="columns"/>
                 <field name="active"/>
-            </tree>
+            </list>
         </field>
     </record>
 
@@ -74,7 +74,7 @@
         <field name="name">warehouse.map.kanban</field>
         <field name="model">warehouse.map</field>
         <field name="arch" type="xml">
-            <kanban class="o_warehouse_map_kanban" create="false">
+            <kanban class="o_warehouse_map_kanban">
                 <field name="id"/>
                 <field name="name"/>
                 <field name="warehouse_id"/>
@@ -107,7 +107,7 @@
     <record id="action_warehouse_map" model="ir.actions.act_window">
         <field name="name">Sơ đồ kho</field>
         <field name="res_model">warehouse.map</field>
-        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_mode">kanban,list,form</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Tạo sơ đồ kho mới
