--- a/hdi/warehouse_map/wizard/assign_lot_position_wizard_views.xml
+++ b/hdi/warehouse_map/wizard/assign_lot_position_wizard_views.xml
@@ -28,6 +28,7 @@
                         <page string="Chọn Lot hiện có" invisible="create_new">
                             <group>
                                 <field name="quant_id" 
+                                       required="not create_new"
                                        options="{'no_create': True}"
                                        context="{'tree_view_ref': 'warehouse_map.view_stock_quant_available_tree'}"/>
                             </group>
