--- a/hdi/hdi_wms/views/wms_menus.xml
+++ b/hdi/hdi_wms/views/wms_menus.xml
@@ -48,4 +48,22 @@
               action="action_wms_inventory_check_barcode"
               sequence="20"/>
 
+    <menuitem id="menu_warehouse_layout_root"
+              name="Sơ đồ Kho"
+              parent="menu_wms_root"
+              sequence="50"
+              groups="group_wms_user"/>
+
+    <menuitem id="menu_warehouse_layout"
+              name="Sơ đồ Kho"
+              parent="menu_warehouse_layout_root"
+              action="action_warehouse_layout"
+              sequence="10"/>
+
+    <menuitem id="menu_warehouse_location_grid"
+              name="Vị trí Lưới"
+              parent="menu_warehouse_layout_root"
+              action="action_warehouse_location_grid"
+              sequence="20"/>
+
 </odoo>
